--- a/ISS Wildcats/ISS Wildcats.csproj
+++ b/ISS Wildcats/ISS Wildcats.csproj
@@ -24,4 +24,8 @@
     </EmbeddedResource>
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MySql.Data" Version="8.3.0" />
+  </ItemGroup>
+
 </Project>
